2016-02-07  Marcin Kościelnicki  <koriakin@0x04.net>

	* tracepoint.c (struct tracepoint_action_ops): Removed.
	(struct tracepoint_action): Removed ops field.
	(struct collect_registers_action): Removed.
	(struct collect_static_trace_data_action): Removed.
	(m_tracepoint_action_download): Removed.
	(m_tracepoint_action_send): Removed.
	(r_tracepoint_action_download): Removed.
	(r_tracepoint_action_send): Removed.
	(x_tracepoint_action_download): Removed.
	(x_tracepoint_action_send): Removed.
	(l_tracepoint_action_download): Removed.
	(l_tracepoint_action_send): Removed.
	(add_tracepoint_action): Remove ops setting.
	(download_tracepoint_1): Download actions inline instead of using ops.
	(tracepoint_send_agent): Send actions inline instead of using ops.

2016-02-02  Walfred Tedeschi  <walfred.tedeschi@intel.com>

	* configure.srv (x86_64-*-linux*): Add amd64-linux-siginfo.o
	to srv_tgtobj.
	(i[34567]86-*-linux*): Add amd64-linux-siginfo.o
	to srv_tgtobj.
	* linux-x86-low.c [__x86_64__]: Include
	"nat/amd64-linux-siginfo.h".
	(compat_siginfo_from_siginfo, siginfo_from_compat_siginfo)
	(compat_x32_siginfo_from_siginfo, siginfo_from_compat_x32_siginfo)
	(compat_timeval, compat_sigval, compat_x32_clock, cpt_si_pid)
	(cpt_si_uid, cpt_si_timerid, cpt_si_overrun, cpt_si_status)
	(cpt_si_utime, cpt_si_stime, cpt_si_ptr, cpt_si_addr, cpt_si_band)
	(cpt_si_fd, si_timerid, si_overrun): Move from
	nat/amd64-linux-siginfo.c.
	* Makefile.in (amd64-linux-siginfo.o:): New rule.

2016-01-28  Simon Marchi  <simon.marchi@ericsson.com>

	* server.c (skip_to_semicolon):  Remove.
	(process_point_options): Use strchrnul instead of
	skip_to_semicolon.

2016-01-26  Yao Qi  <yao.qi@linaro.org>

	* linux-arm-low.c (arm_gdbserver_get_next_pcs): Remove argument pc.
	* linux-low.c (install_software_single_step_breakpoints): Don't
	call regcache_read_pc.
	* linux-low.h (struct linux_target_ops) <get_next_pcs>: Remove
	argument pc.

2016-01-26  Yao Qi  <yao.qi@linaro.org>
